--- a/BookStore/wwwroot/css/style-admin.css
+++ b/BookStore/wwwroot/css/style-admin.css
@@ -1047,14 +1047,16 @@ h6 {
 .profile .profile-edit img {
   max-width: 120px;
 }
-
+.table tbody td img{
+    max-width: 80px;
+}
 /*--------------------------------------------------------------
 # F.A.Q Page
 --------------------------------------------------------------*/
 .faq .basic h6 {
-  font-size: 18px;
-  font-weight: 600;
-  color: #4154f1;
+    font-size: 18px;
+    font-weight: 600;
+    color: #4154f1;
 }
 
 .faq .basic p {
