--- a/BookStore/wwwroot/css/bundle.css
+++ b/BookStore/wwwroot/css/bundle.css
@@ -80,7 +80,7 @@ a,
     transition: all 0.3s ease-out 0s;
 }
 .btn {
-    border-radius: 0px;
+    /*border-radius: 0px;*/
     font-size: 14px;
     padding: 0px 15px;
     height: 30px;
