--- a/BookStore/wwwroot/css/style.css
+++ b/BookStore/wwwroot/css/style.css
@@ -9534,7 +9534,7 @@ input.cart-plus-minus-box {
     float: left;
     font-size: 16px;
     height: 25px;
-    margin: 0;
+    margin-top: 5px;
     padding: 0;
     text-align: center;
     width: 25px;
@@ -9548,7 +9548,10 @@ input.cart-plus-minus-box {
     border: 1px solid #dcdcdc;
     overflow: hidden;
     padding: 0px 0 4px 4px;
-    width: 30px;
+    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .quickview-plus-minus {
     display: flex;
@@ -9582,7 +9585,7 @@ input.cart-plus-minus-box {
     margin: 0 30px;
 }
 .qtybutton.inc {
-    margin-top: 2px;
+    margin: 5px;
 }
 .price {
     margin: 9px 0 8px;
