--- a/BookStore/Areas/Owner/Views/Dashboard/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Dashboard/Index.cshtml
@@ -16,7 +16,7 @@
 		</nav>
 	</div><!-- End Page Title -->
 
-	<section class="section dashboard">
+	@* <section class="section dashboard">
 		<div class="row">
 
 			<!-- Left side columns -->
@@ -135,7 +135,7 @@
 			</div><!-- End Left side columns -->
 
 		</div><!-- End Right side columns -->
-	</section>
+	</section> *@
 </main><!-- End #main -->
 @section Scripts{
 	<script src="~/js/js-admin/main.js"></script>
