--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -1632,7 +1632,9 @@
 @section Scripts {
     <script src="~/js/main.js"></script>
     <script>
+        
         const api = "@ViewBag.api"
         localStorage.setItem("apiUrl", api);
+        console.log(api);
     </script>
 }
