--- a/BookStore/Areas/Owner/Views/Discounts/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Discounts/Index.cshtml
@@ -33,9 +33,10 @@
                                         </div>
                                     </div>
                                 </div>
+                            <button onclick="exportToExcel()" class="btn btn-secondary">Export Excel</button>
                             @* </form> *@
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#discountModal">Add New Discount</button>
-
+                            
                             <!-- Modal -->
                             <div class="modal fade" id="discountModal" tabindex="-1" role="dialog" aria-labelledby="discountModalLabel" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
@@ -117,6 +118,45 @@
 
 </main><!-- End #main -->
 @section Scripts{
+
+    <script>
+        function exportToExcel() {
+            Swal.fire({
+                title: 'Export Excel',
+                text: 'Are you sure you want to export data to Excel?',
+                icon: 'question',
+                showCancelButton: true,
+                confirmButtonText: 'Yes, export it!',
+                cancelButtonText: 'Cancel'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        url: apiUrl + '/api/Discounts/export',
+                        type: 'GET',
+                        xhrFields: {
+                            responseType: 'blob'
+                        },
+                        success: function (data) {
+                            var a = document.createElement('a');
+                            var url = window.URL.createObjectURL(data);
+                            a.href = url;
+                            a.download = 'exportedFile.xlsx';
+                            document.body.appendChild(a);
+                            a.click();
+                            window.URL.revokeObjectURL(url);
+                            document.body.removeChild(a);
+                        },
+                        error: function (error) {
+                            console.log('Error:', error);
+                        }
+                    });
+                }
+            });
+        }
+
+
+    </script>
+
     <script src="~/js/js-owner/discount.js"></script>
     <script src="~/js/js-admin/main.js"></script>
 }
