--- a/BookStore/Areas/Owner/Views/Languages/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Languages/Index.cshtml
@@ -20,6 +20,7 @@
                                         </div>
                                     </div>
                                 </div>
+                            <button onclick="exportToExcel()" class="btn btn-secondary">Export Excel</button>
                             @* </form> *@
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#languageModal" onclick="handleAddButton()">Add New Language</button>
 
@@ -89,6 +90,44 @@
 </main><!-- End #main -->
 
 @section Scripts{
+
+    <script>
+        function exportToExcel() {
+            Swal.fire({
+                title: 'Export Excel',
+                text: 'Are you sure you want to export data to Excel?',
+                icon: 'question',
+                showCancelButton: true,
+                confirmButtonText: 'Yes, export it!',
+                cancelButtonText: 'Cancel'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        url: apiUrl + '/api/Languages/export',
+                        type: 'GET',
+                        xhrFields: {
+                            responseType: 'blob'
+                        },
+                        success: function (data) {
+                            var a = document.createElement('a');
+                            var url = window.URL.createObjectURL(data);
+                            a.href = url;
+                            a.download = 'exportedFile.xlsx';
+                            document.body.appendChild(a);
+                            a.click();
+                            window.URL.revokeObjectURL(url);
+                            document.body.removeChild(a);
+                        },
+                        error: function (error) {
+                            console.log('Error:', error);
+                        }
+                    });
+                }
+            });
+        }
+    </script>
+
+
     <script src="~/js/js-owner/language.js"></script>
     <script src="~/js/js-admin/main.js"></script>
 }
