--- a/BookStore/Views/Home/Shop.cshtml
+++ b/BookStore/Views/Home/Shop.cshtml
@@ -103,5 +103,7 @@
 	<script src="~/js/main.js"></script>
 	<script src="~/js/header.js"></script>
 	<script src="~/js/shop.js"></script>
+	<script src="~/js/cart.js"></script>
+	<script src="~/js/cardetail.js"></script>
 }
 
