--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
 	<link rel="stylesheet" href="~/css/style.css">
 	<link rel="stylesheet" href="~/css/responsive.css">
 	<script src="~/js/vendor/modernizr-3.11.7.min.js"></script>
-
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 	@RenderSection("stylesheets", required: false)
 
 </head>
@@ -70,47 +70,8 @@
 				@if (SignInManager.IsSignedIn(User))
 				{
 					var user = await UserManager.GetUserAsync(User);
-
 					<div class="header-cart-2" id="cart"> </div>
-
-					<!-- Cart ICON -->
-					<div class="header-cart-2">
-						<a class="icon-cart" href="#">
-							<i class="ti-heart"></i>
-							<span class="shop-count book-count">10</span>
-						</a>
-						<ul class="cart-dropdown">
-							<li class="single-product-cart">
-								<div class="cart-img">
-									<a href="#"><img src="~/img/product/book/1.jpg" alt=""></a>
-								</div>
-								<div class="cart-title">
-									<h5><a href="#"> Bits Headphone</a></h5>
-									<h6><a href="#">Black</a></h6>
-									<span>$80.00 x 1</span>
-								</div>
-								<div class="cart-delete">
-									<a href="#"><i class="ti-trash"></i></a>
-								</div>
-							</li>
-							<li class="single-product-cart">
-								<div class="cart-img">
-									<a href="#"><img src="~/img/product/book/3.jpg" alt=""></a>
-								</div>
-								<div class="cart-title">
-									<h5><a href="#"> Bits Headphone</a></h5>
-									<h6><a href="#">Black</a></h6>
-									<span>$80.00 x 1</span>
-								</div>
-								<div class="cart-delete">
-									<a href="#"><i class="ti-trash"></i></a>
-								</div>
-							</li>
-							<li class="cart-btn-wrapper">
-								<a class="cart-btn btn-hover" asp-controller="Home" asp-action="Wishlist" asp-route-userId="@user.Id">view wishlist</a>
-							</li>
-						</ul>
-					</div>
+					<div class="header-cart-2" id="wishlist"> </div>
 				}
 				@* ICON Search *@
 				<div class="header-cart-2">
@@ -156,6 +117,10 @@
 									padding: 10px 15px;
 									margin-left: 10px;
 									cursor: pointer;
+								}
+
+								.bi-suit-heart-fill {
+									color: red;
 								}
 							</style>
 						</li>
@@ -304,6 +269,7 @@
 	@if (SignInManager.IsSignedIn(User))
 	{
 		<script src="~/js/header.js"></script>
+		<script src="~/js/cart.js"></script>
 	}
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
