--- a/BookStore/Areas/Owner/Views/Discounts/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Discounts/Index.cshtml
@@ -140,7 +140,7 @@
                             var a = document.createElement('a');
                             var url = window.URL.createObjectURL(data);
                             a.href = url;
-                            a.download = 'exportedFile.xlsx';
+                            a.download = 'Discounts.xlsx';
                             document.body.appendChild(a);
                             a.click();
                             window.URL.revokeObjectURL(url);
