--- a/BookStore/Areas/Owner/Views/FeedBacks/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/FeedBacks/Index.cshtml
@@ -97,7 +97,7 @@
                             var a = document.createElement('a');
                             var url = window.URL.createObjectURL(data);
                             a.href = url;
-                            a.download = 'exportedFile.xlsx';
+                            a.download = 'FeedBacks.xlsx';
                             document.body.appendChild(a);
                             a.click();
                             window.URL.revokeObjectURL(url);
