--- a/BookStore/Areas/Owner/Views/Languages/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Languages/Index.cshtml
@@ -112,7 +112,7 @@
                             var a = document.createElement('a');
                             var url = window.URL.createObjectURL(data);
                             a.href = url;
-                            a.download = 'exportedFile.xlsx';
+                            a.download = 'Languages.xlsx';
                             document.body.appendChild(a);
                             a.click();
                             window.URL.revokeObjectURL(url);
