--- a/BookStore/Areas/Owner/Views/Reviews/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Reviews/Index.cshtml
@@ -74,7 +74,7 @@
                             var a = document.createElement('a');
                             var url = window.URL.createObjectURL(data);
                             a.href = url;
-                            a.download = 'exportedFile.xlsx';
+                            a.download = 'Reviews.xlsx';
                             document.body.appendChild(a);
                             a.click();
                             window.URL.revokeObjectURL(url);
